--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>7.55 GoldHen Host Menu</title>
+    <title>ELS3EDY GoldHen Host Menu</title>
     <link rel="shortcut icon" href="favicon.ico"></link>
 </head>   
 <script>
@@ -18,7 +18,7 @@ window.applicationCache.onprogress = function(a)
 
 window.applicationCache.oncached = window.applicationCache.onupdateready = function()
 {
-	alert("Page Cached!!")
+	alert("Page Cached!! Close browser/network and reopen pageagain")
 };
 </script>
 <div id="progress"></div>
@@ -91,19 +91,14 @@ border-radius: 25px;
 </style>
 
 <body style="background-color:#3462a8;color:white;font-size:20px;text-align:center;">
-<h1 style='font-size:40px;margin:0;'>7.55 GoldHen Host Menu</h1>
-<h3 style='font-size:26px;margin:0;'>Little Version by Chronoss</h3>
+<h1 style='font-size:40px;margin:0;'>ELS3EDY Menu 755</h1>
+<h3 style='font-size:26px;margin:0;'>thanks Chronoss</h3>
 <hr><br><br>
-<i><p>This host is for users that only use necessary payloads<br></p></i>
+<i><p>This host is for users that only sambly <br></p></i>
 <i><div id=mybuttons style=text-align:center>
 <a href="payload.html#p0=mira/mira.js&p1=goldhen.js"><button class="btn btn-main" onclick=hen()> GoldHen v1.1</button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/BinLoader9021.js"><button class="btn btn-main" onclick=bin()> BinLoader</button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/PS4Debug.js"><button class="btn btn-main" onclick=bug()> PS4Debug </button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/WebRTE.js"><button class="btn btn-main" onclick=rte()> PS4 Trainer </button></a><br>
-<a href="payload.html#p0=mira/mira.js&p1=mira/App2usb.js"><button class="btn btn-main" onclick=app()> App2USB </button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/Dumper.js"><button class="btn btn-main" onclick=dum()> Dumper </button></a>
-<a href="payload.html#p0=mira/mira.js&p1=linux/1gb.js"><button class="btn btn-main" onclick=bug()> Linux 1G</button></a>
-<a href="payload.html#p0=mira/mira.js&p1=linux/3gb.js"><button class="btn btn-main" onclick=rte()> Linux 3G</button></a>
+<a href="payload.html#p0=mira/mira.js&p1=mira/disableupdates.js"><button class="btn btn-main" onclick=bin()> disableupdates</button></a>
+<a href="payload.html#p0=mira/mira.js&p1=mira/enableupdates.js"><button class="btn btn-main" onclick=bug()> enableupdates </button></a>
 </div>
 <div style="position:fixed;left:0;bottom:40px;width:100%;font-size:16px;opacity:0;">
 <a href="payload.html#p0=mira/mira.js&p1=mira/pl_WebRTE.js"><button class="old btn-old"> 6.72 </button></a>
