--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>7.55 GoldHen Host Menu</title>
+    <title>Els3edy GoldHen Host Menu</title>
     <link rel="shortcut icon" href="favicon.ico"></link>
 </head>   
 <script>
@@ -91,13 +91,13 @@ border-radius: 25px;
 </style>
 
 <body style="background-color:#3462a8;color:white;font-size:20px;text-align:center;">
-<h1 style='font-size:40px;margin:0;'>7.55 GoldHen Host Menu</h1>
-<h3 style='font-size:26px;margin:0;'>Little Version by Chronoss</h3>
+<h1 style='font-size:40px;margin:0;'>Els3edy GoldHen Host Menu 7.55</h1>
+<h3 style='font-size:26px;margin:0;'>thanks Chronoss</h3>
 <hr><br><br>
 <i><p>This host is for users that only use necessary payloads<br></p></i>
 <i><div id=mybuttons style=text-align:center>
 <a href="payload.html#p0=mira/mira.js&p1=goldhen.js"><button class="btn btn-main" onclick=hen()> GoldHen v1.1</button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/BinLoader9021.js"><button class="btn btn-main" onclick=bin()> BinLoader</button></a>
+<a href="payload.html#p0=mira/mira.js&p1=mira/BinLoader9021.js"><button class="btn btn-main" onclick=bin()> binloader </button></a>
 <a href="payload.html#p0=mira/mira.js&p1=mira/PS4Debug.js"><button class="btn btn-main" onclick=bug()> PS4Debug </button></a>
 <a href="payload.html#p0=mira/mira.js&p1=mira/WebRTE.js"><button class="btn btn-main" onclick=rte()> PS4 Trainer </button></a><br>
 <a href="payload.html#p0=mira/mira.js&p1=mira/App2usb.js"><button class="btn btn-main" onclick=app()> App2USB </button></a>
@@ -109,7 +109,7 @@ border-radius: 25px;
 <a href="payload.html#p0=mira/mira.js&p1=mira/pl_WebRTE.js"><button class="old btn-old"> 6.72 </button></a>
 <a href="payload.html#p0=mira/mira.js&p1=mira/pl_WebRTE.js"><button class="old btn-old"> 7.02</button></a></div>
 <div style="position:fixed;left:0;bottom:-8px;width:100%;font-size:16px;">
-<hr>*7.5x GoldHEN Host Menu, little version by Chronoss, host by Leefull&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*PS4 Firmware <span id="PS4fw"></span><hr>
+<hr>*7.5x GoldHEN Host Menu, little version by Chronoss, host by Leefull,host by els3edyps4&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*PS4 Firmware <span id="PS4fw"></span><hr>
 </div>
 <script>
 UA = navigator.userAgent.substring(navigator.userAgent.indexOf("7.55 (") + 28, navigator.userAgent.indexOf(") Apple"));
