--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>7.55 GoldHen Host Menu</title>
+    <title>Els3edy 7.55 GoldHen Host Menu</title>
     <link rel="shortcut icon" href="favicon.ico"></link>
 </head>   
 <script>
@@ -91,7 +91,7 @@ border-radius: 25px;
 </style>
 
 <body style="background-color:#3462a8;color:white;font-size:20px;text-align:center;">
-<h1 style='font-size:40px;margin:0;'>7.55 GoldHen Host Menu</h1>
+<h1 style='font-size:40px;margin:0;'>Els3edy 7.55 GoldHen Host Menu</h1>
 <h3 style='font-size:26px;margin:0;'>Little Version by Chronoss</h3>
 <hr><br><br>
 <i><p>This host is for users that only use necessary payloads<br></p></i>
