--- a/index.html
+++ b/index.html
@@ -97,19 +97,12 @@ border-radius: 25px;
 <i><p>This host is for users that only use necessary payloads<br></p></i>
 <i><div id=mybuttons style=text-align:center>
 <a href="payload.html#p0=mira/mira.js&p1=goldhen.js"><button class="btn btn-main" onclick=hen()> GoldHen v1.1</button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/BinLoader9021.js"><button class="btn btn-main" onclick=bin()> BinLoader</button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/PS4Debug.js"><button class="btn btn-main" onclick=bug()> PS4Debug </button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/WebRTE.js"><button class="btn btn-main" onclick=rte()> PS4 Trainer </button></a><br>
-<a href="payload.html#p0=mira/mira.js&p1=mira/App2usb.js"><button class="btn btn-main" onclick=app()> App2USB </button></a>
-<a href="payload.html#p0=mira/mira.js&p1=mira/Dumper.js"><button class="btn btn-main" onclick=dum()> Dumper </button></a>
-<a href="payload.html#p0=mira/mira.js&p1=linux/1gb.js"><button class="btn btn-main" onclick=bug()> Linux 1G</button></a>
-<a href="payload.html#p0=mira/mira.js&p1=linux/3gb.js"><button class="btn btn-main" onclick=rte()> Linux 3G</button></a>
 </div>
 <div style="position:fixed;left:0;bottom:40px;width:100%;font-size:16px;opacity:0;">
 <a href="payload.html#p0=mira/mira.js&p1=mira/pl_WebRTE.js"><button class="old btn-old"> 6.72 </button></a>
 <a href="payload.html#p0=mira/mira.js&p1=mira/pl_WebRTE.js"><button class="old btn-old"> 7.02</button></a></div>
 <div style="position:fixed;left:0;bottom:-8px;width:100%;font-size:16px;">
-<hr>*7.5x GoldHEN Host Menu, little version by Chronoss, host by Leefull&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*PS4 Firmware <span id="PS4fw"></span><hr>
+<hr>Els3edy Host Menu, little version by Chronoss, host by Leefull&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;*PS4 Firmware <span id="PS4fw"></span><hr>
 </div>
 <script>
 UA = navigator.userAgent.substring(navigator.userAgent.indexOf("7.55 (") + 28, navigator.userAgent.indexOf(") Apple"));
